syntax = "proto3";

package gs.service.permission;

import "konekko.me/gosion/commons/dto/commons.proto";

//角色
service Role {

    rpc add(RoleRequest) returns (gs.commons.dto.Status);

    rpc remove(RoleRequest) returns (gs.commons.dto.Status);

    rpc rename(RoleRequest) returns (gs.commons.dto.Status);

}

message RoleRequest {
    int64 id = 1;
    string name = 2;
    string structureId = 3;
}